--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col text-muted">
+                    <div class="col text-muted mb-5">
 
                         <div class="row justify-content-center">
 
