--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
 <body>
 
-    <div class="container-fluid">
+    <div class="container-fluid mb-5">
         <!-- NAVBAR -->
         <div class="row">
             <div class="col-12 bg-white border-bottom border-muted" style="border-width: 2.5px !important">
@@ -98,7 +98,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col mt-3">
+                            <div class="col mt-3 mb-5">
                                 <input type="submit" value="Submit">
                             </div>
                         </div>
