--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         /* layout */
         margin: 20px;
+        margin-bottom: 100px;
         /* font */
         font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
         font-size: 20px;
@@ -41,9 +42,10 @@
 <body>
 
     <div class="container-fluid">
+        
         <!-- NAVBAR -->
         <div class="row">
-            <div class="col-12 bg-white border-bottom border-muted" style="border-width: 2.5px !important">
+            <div class="col-12 bg-white border-bottom border-muted mb-5" style="border-width: 2.5px !important">
                 <div class="row bg-white">
                     <div class="col-md-4  offset-md-1 p-3 text-white text-center mr-auto" style="background-color:#4aaaa5;">
                         <h2>Weston Carpenter</h2>
@@ -60,7 +62,7 @@
         </div>
         <!-- MAIN CONTENT -->
         <div class="row justify-content-left">
-            <div class="col-lg-8 col-md-10 col-sm-12 bg-white offset-md-1 mt-5 p-5 border border-muted">
+            <div class="col-lg-8 col-md-10 col-sm-12 bg-white offset-md-1 p-5 border border-muted">
                 <div class="row">
                     <div class="col border-bottom border-muted mb-4"
                         style="border-width: 2.5px !important;color:#4aaaa5">
@@ -68,7 +70,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col text-muted">
+                    <div class="col text-muted mb-5">
                         <img class="float-left m-4" src="images/profile170x174.jpg">
 
                         <p> <strong>Hi, I'm Weston.</strong> I am currently enrolled in UC Berkley Extension's Full
