--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
                         <div class="row justify-content-center">
 
                             <div class="col-md-6 col-sm-8 p-3">
-                                <img src="images/city.webp" alt="city">
+                                <img src="images/cow.jpg" alt="cow">
                                 <div class="row">
                                     <div class="banner">
                                         <h3>Hangman</h3>
