--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,10 @@
         font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     }
 
+    h2 {
+        /* font */
+        font-family: 'Georgia', Times, Times New Roman, serif;
+    }
     h5 {
         /* font */
         font-family: 'Georgia', Times, Times New Roman, serif;
