Added links and images for projects in Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 <body>
 
     <div class="container-fluid">
-        
+
         <!-- NAVBAR -->
         <div class="row">
             <div class="col-12 bg-white border-bottom border-muted" style="border-width: 2.5px !important">
@@ -92,58 +92,72 @@
 
                         <div class="row justify-content-center">
 
-                            <div class="col-md-6 col-sm-8 p-3">
-                                <img src="images/cow.jpg" alt="cow">
-                                <div class="row">
-                                    <div class="banner">
-                                        <h3>Hangman</h3>
+                            <a href="https://wcarpenter96.github.io/Word-Guess-Game/">
+                                <div class="col-md-6 col-sm-8 p-3">
+                                    <img src="images/NameThatCat.jpg" alt="cow">
+                                    <div class="row">
+                                        <div class="banner">
+                                            <h3>Name That Cat</h3>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
 
-
-
-                            <div class="col-md-6 col-sm-8 p-3">
-                                <img src="images/desktop.jpg" alt="desktop">
-                                <div class="row">
-                                    <div class="banner">
-                                        <h3>RPG Game</h3>
+                            <a href="https://wcarpenter96.github.io/unit-4-game/">
+                                <div class="col-md-6 col-sm-8 p-3">
+                                    <img src="images/Elements.jpg" alt="avocado">
+                                    <div class="row">
+                                        <div class="banner">
+                                            <h3>Elements</h3>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
 
-
-                            <div class="col-md-6 col-sm-8 p-3">
-                                <img src="images/avocado.jpg" alt="avocado">
-                                <div class="row">
-                                    <div class="banner">
-                                        <h3>Trivia Game</h3>
+                            <a href="https://wcarpenter96.github.io/TriviaGame/">
+                                <div class="col-md-6 col-sm-8 p-3">
+                                    <img src="images/SwimQuiz.jpg" alt="puppy">
+                                    <div class="row">
+                                        <div class="banner">
+                                            <h3>Swim Quiz</h3>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
 
-
-                            <div class="col-md-6 col-sm-8 p-3">
-                                <img src="images/puppy.jpeg" alt="puppy">
-                                <div class="row">
-                                    <div class="banner">
-                                        <h3>Rutgers Info Widget</h3>
+                            <a href="https://wcarpenter96.github.io/Word-Guess-Game/">
+                                <div class="col-md-6 col-sm-8 p-3">
+                                    <img src="images/mandelbrot.png" alt="mandelbrot">
+                                    <div class="row">
+                                        <div class="banner">
+                                            <h3>Mandelbrot Set</h3>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
 
-
-                            <div class="col-md-6 col-sm-8 p-3">
-                                <img src="images/mandelbrot.png" alt="mandelbrot">
-                                <div class="row">
-                                    <div class="banner">
-                                        <h3>Rock Paper Scissors</h3>
+                            <a href="https://wcarpenter96.github.io/Word-Guess-Game/">
+                                <div class="col-md-6 col-sm-8 p-3">
+                                    <img src="images/desktop.jpg" alt="desktop">
+                                    <div class="row">
+                                        <div class="banner">
+                                            <h3>Desktop</h3>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
 
                             <!-- Placeholder -->
-                            <div class="col-md-6 col-sm-8 p-3"></div>
+                            <a href="https://wcarpenter96.github.io/Word-Guess-Game/">
+                                <div class="col-md-6 col-sm-8 p-3">
+                                    <img src="images/cow.jpg" alt="mandelbrot">
+                                    <div class="row">
+                                        <div class="banner">
+                                            <h3>Cowabunga</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
 
                         </div>
 
