Updated Portfolio to include GifTastic

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
 
                             <a href="https://wcarpenter96.github.io/Word-Guess-Game/">
                                 <div class="col-md-6 col-sm-8 p-3">
-                                    <img src="images/NameThatCat.jpg" alt="cow">
+                                    <img src="images/NameThatCat.jpg" alt="NameThatCat">
                                     <div class="row">
                                         <div class="banner">
                                             <h3>Name That Cat</h3>
@@ -105,7 +105,7 @@
 
                             <a href="https://wcarpenter96.github.io/unit-4-game/">
                                 <div class="col-md-6 col-sm-8 p-3">
-                                    <img src="images/Elements.jpg" alt="avocado">
+                                    <img src="images/Elements.jpg" alt="Elements">
                                     <div class="row">
                                         <div class="banner">
                                             <h3>Elements</h3>
@@ -116,7 +116,7 @@
 
                             <a href="https://wcarpenter96.github.io/TriviaGame/">
                                 <div class="col-md-6 col-sm-8 p-3">
-                                    <img src="images/SwimQuiz.jpg" alt="puppy">
+                                    <img src="images/SwimQuiz.jpg" alt="SwimQuiz">
                                     <div class="row">
                                         <div class="banner">
                                             <h3>Swim Quiz</h3>
@@ -125,9 +125,9 @@
                                 </div>
                             </a>
 
-                            <a href="https://wcarpenter96.github.io/Word-Guess-Game/">
+                            <a href="https://wcarpenter96.github.io/GifTastic/">
                                 <div class="col-md-6 col-sm-8 p-3">
-                                    <img src="images/mandelbrot.png" alt="mandelbrot">
+                                    <img src="images/GifTastic.jpg" alt="GifTastic">
                                     <div class="row">
                                         <div class="banner">
                                             <h3>Mandelbrot Set</h3>
