Added title to Giftastic portfolio link

--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,7 @@
                                     <img src="images/GifTastic.jpg" alt="GifTastic">
                                     <div class="row">
                                         <div class="banner">
-                                            <h3>Mandelbrot Set</h3>
+                                            <h3>TV Show Gifs</h3>
                                         </div>
                                     </div>
                                 </div>
